# lycrex-tool

./: .gitignore  Cargo.toml  rustfmt.toml
assets/scripts/: windows_logo.ps1
examples/: logger.rs  logo.rs  math.rs  mem.rs  startup.rs  sysinf.rs
src/: constants.rs  lib.rs  memory.rs  print.rs
src/lycrex/: info.rs  logger.rs  logo.rs  mod.rs
src/system/: mod.rs
src/system/common/: error.rs  mod.rs  types.rs  utils.rs
src/system/environment/: mod.rs
src/system/filesystem/: mod.rs
src/system/hardware/: mod.rs
src/system/memory/: linux.rs  macos.rs  mod.rs  utils.rs  windows.rs
src/system/network/: mod.rs
src/system/permissions/: mod.rs
src/system/process/: mod.rs
src/system/registry/: mod.rs
src/system/scheduler/: mod.rs
src/system/security/: mod.rs
src/system/service/: mod.rs
src/system/startup/: linux.rs  macos.rs  mod.rs  types.rs
src/system/sysinfo/: mod.rs
src/utils/: format.rs  mod.rs  time.rs
src/utils/math/: advanced.rs  basic.rs  classification.rs  constants.rs  mod.rs
tests/: mem_read.rs
