[package]
name = "lycrex-tool"
version = "0.1.2-rc2"
edition = "2021"
description = "Lycrex Tool"
license = "MIT"
authors = ["ChisatoNishikigi73"]
repository = "https://github.com/ChisatoNishikigi73/lycrex-tool"
homepage = "https://github.com/ChisatoNishikigi73/lycrex-tool"
keywords = ["lycrex"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
windows = { version = "0.61", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_Security"
]}
colored = "3.0.0"
sysinfo = "0.36.1"
regex = "1.11.2"
serde_json = "1.0.143"

# Unix系统相关依赖
[target.'cfg(unix)'.dependencies]
libc = "0.2"
